fix: page jump scroll on page load and desktop menu sound select

--- a/css/media-player.css
+++ b/css/media-player.css
@@ -70,6 +70,7 @@
   border-radius: 8px;
   margin-top: 0;
   scrollbar-width: none;
+  overscroll-behavior: contain;
 }
 
 #desktop-sounds-list::-webkit-scrollbar {
